<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>io.mycat.mycat</groupId>
	<artifactId>Mycat-server</artifactId>
	<version>2.0-dev</version>
	<packaging>jar</packaging>
	<name>Mycat-server</name>
	<description>The project of Mycat-server</description>
	<url>http://io.mycat</url>

	<properties>
		<app.encoding>UTF-8</app.encoding>
		<!-- maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format> 
			<buildNumber>${maven.build.timestamp}</buildNumber -->
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
		<version.template.file>version.txt.template</version.template.file>
		<version.file>version.txt</version.file>
	</properties>
	<scm>
		<connection>scm:git:ssh://apachemycat@github.com/MyCATApache/Mycat-Server.git</connection>
		<developerConnection>scm:git:ssh://apachemycat@github.com/MyCATApache/Mycat-Server.git</developerConnection>
		<url>scm:git:ssh://apachemycat@github.com/MyCATApache/Mycat-Server.git</url>
	</scm>
	<repositories>
		<repository>
			<id>nexus</id>
			<name>local private nexus</name>
			<url>http://nexus.mycat.io/content/groups/public</url>
		</repository>
	</repositories>
	<distributionManagement>
		<repository>
			<id>releases</id>
			<name>Internal Releases</name>
			<url>http://nexus.mycat.io/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Internal Snapshots</name>
			<url>http://nexus.mycat.io/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	<dependencies>
		<!-- test -->
		<dependency>
			<groupId>org.codehaus.jsr166-mirror</groupId>
			<artifactId>jsr166y</artifactId>
			<version>1.7.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.4</version>
			<scope>test</scope>
		</dependency>

		<!-- driver -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.35</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>2.11.4</version>
		</dependency>
		<dependency>
			<groupId>org.iq80.leveldb</groupId>
			<artifactId>leveldb</artifactId>
			<version>0.7</version>
		</dependency>
		<dependency>
			<groupId>org.iq80.leveldb</groupId>
			<artifactId>leveldb-api</artifactId>
			<version>0.7</version>
		</dependency>
		<dependency>
			<groupId>com.sequoiadb</groupId>
			<artifactId>sequoiadb-driver</artifactId>
			<version>1.12</version>
		</dependency>

		<!-- common -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>18.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.2</version>
		</dependency>

		<!-- parse -->
		<dependency>
			<groupId>com.univocity</groupId>
			<artifactId>univocity-parsers</artifactId>
			<version>1.5.4</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.14</version>
		</dependency>
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>1.16</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity</artifactId>
			<version>1.7</version>
		</dependency>

		<!-- cache -->
		<dependency>
			<groupId>org.mapdb</groupId>
			<artifactId>mapdb</artifactId>
			<version>1.0.7</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache-core</artifactId>
			<version>2.6.11</version>
			<scope>compile</scope>
		</dependency>

		<!-- zookeeper -->
		<dependency>
			<groupId>org.apache.curator</groupId>
			<artifactId>curator-framework</artifactId>
			<version>2.9.0</version>

		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.12</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.3</version>
		</dependency>
	</dependencies>



	<issueManagement>
		<system>JIRA</system>
		<url>http://io.mycat</url>
	</issueManagement>

	<build>
		<!-- finalName>${artifactId}-${version}-${buildNumber}</finalName -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>**/.svn/**</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>${basedir}</directory>
				<includes>
					<include>${version.file}</include>
				</includes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<excludes>
					<exclude>**/.svn/**</exclude>
				</excludes>
			</testResource>
		</testResources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.google.code.maven-replacer-plugin</groupId>
										<artifactId>replacer</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>replace</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>com.google.code.maven-replacer-plugin</groupId>
				<artifactId>replacer</artifactId>
				<version>1.5.3</version>
				<executions>
					<execution>
						<id>version</id>
						<phase>process-sources</phase>
						<goals>
							<goal>replace</goal>
						</goals>
						<configuration>
							<file>${project.basedir}/${version.template.file}</file>
							<outputFile>${project.basedir}/${version.file}</outputFile>
							<replacements>
								<replacement>
									<token>@buildnumber@</token>
									<value>${buildNumber}</value>
								</replacement>
								<replacement>
									<token>@buildtime@</token>
									<value>${maven.build.timestamp}</value>
								</replacement>
								<replacement>
									<token>@pomversion@</token>
									<value>${project.version}</value>
								</replacement>
								<replacement>
									<token>@giturl@</token>
									<value>https://github.com/MyCATApache/Mycat-Server.git</value>
								</replacement>
								<replacement>
									<token>@mycatsite@</token>
									<value>http://www.mycat.org.cn</value>
								</replacement>
								<replacement>
									<token>@qqgroup@</token>
									<value>106088787</value>
								</replacement>
							</replacements>
						</configuration>
					</execution>
					<execution>
						<id>version2</id>

						<phase>process-sources</phase>
						<goals>
							<goal>replace</goal>
						</goals>
						<configuration>
							<file>${project.basedir}/src/main/java/io/mycat/server/Versions.template</file>
							<outputFile>${project.basedir}/src/main/java/io/mycat/server/Versions.java</outputFile>
							<replacements>
								<replacement>
									<token>@server-version@</token>
									<value>5.5.8-mycat-${project.version}-${timestamp}</value>
								</replacement>
							</replacements>
						</configuration>
					</execution>
				</executions>

			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>${app.encoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<configuration>
					<encoding>${app.encoding}</encoding>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/.svn/**</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
						<!-- configuration> <finalName>${project.build.finalName}-${buildNumber}</finalName> 
							</configuration -->
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<sourceExcludes>
						<sourceExclude>**/.svn/**</sourceExclude>
					</sourceExcludes>
					<downloadSources>true</downloadSources>
					<outputDirectory>classes</outputDirectory>
					<additionalConfig>
						<file>
							<name>.settings/org.eclipse.core.resources.prefs</name>
							<content>
               <![CDATA[eclipse.preferences.version=1${line.separator}encoding/<project>=${app.encoding}${line.separator}]]>
							</content>
						</file>
					</additionalConfig>
				</configuration>
			</plugin>
			<!-- -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.7</version>
				<configuration>
					<configurationDirectory>conf</configurationDirectory>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
					<repositoryLayout>flat</repositoryLayout>
					<useWildcardClassPath>true</useWildcardClassPath>
					<daemons>
						<daemon>
							<id>mycat</id>
							<mainClass>io.mycat.MycatStartup</mainClass>
							<commandLineArguments>
								<commandLineArgument>start</commandLineArgument>
							</commandLineArguments>
							<platforms>
								<platform>jsw</platform>
							</platforms>
							<jvmSettings>
								<!-- 启动内存配置 -->
								<maxStackSize>128</maxStackSize>
								<systemProperties>
									<systemProperty>MYCAT_HOME=.</systemProperty>
								</systemProperties>
								<extraArguments>
									<extraArgument>-server</extraArgument>
									<extraArgument>-XX:MaxPermSize=64M</extraArgument>
									<extraArgument>-XX:+AggressiveOpts</extraArgument>
									<extraArgument>-XX:MaxDirectMemorySize=2G</extraArgument>
									<!-- 远程JMX -->
									<extraArgument>-Dcom.sun.management.jmxremote</extraArgument>
									<extraArgument>-Dcom.sun.management.jmxremote.port=1984</extraArgument>
									<extraArgument>-Dcom.sun.management.jmxremote.authenticate=false</extraArgument>
									<extraArgument>-Dcom.sun.management.jmxremote.ssl=false</extraArgument>
									<extraArgument>-Xmx4G</extraArgument>
									<extraArgument>-Xms1G</extraArgument>
								</extraArguments>
							</jvmSettings>
							<generatorConfigurations>
								<generatorConfiguration>
									<generator>jsw</generator>
									<includes>
										<include>aix-ppc-32</include>
										<include>aix-ppc-64</include>
										<include>hpux-parisc-64</include>
										<include>linux-x86-32</include>
										<include>linux-x86-64</include>
										<include>linux-ppc-64</include>
										<include>macosx-ppc-32</include>
										<include>macosx-x86-universal-32</include>
										<include>macosx-universal-32</include>
										<include>macosx-universal-64</include>
										<include>solaris-sparc-32</include>
										<include>solaris-sparc-64</include>
										<include>solaris-x86-32</include>
										<include>windows-x86-32</include>
										<include>windows-x86-64</include>
									</includes>

									<configuration>
										<property>
											<name>configuration.directory.in.classpath.first</name>
											<value>conf</value>
										</property>
                                        <property>
                                            <name>wrapper.ping.timeout</name>
                                            <value>120</value>
                                        </property>
										<property>
											<name>set.default.REPO_DIR</name>
											<value>lib</value>
										</property>
										<property>
											<name>wrapper.logfile</name>
											<value>logs/wrapper.log</value>
										</property>
									</configuration>

								</generatorConfiguration>
							</generatorConfigurations>
						</daemon>

					</daemons>
				</configuration>
				<executions>
					<execution>
						<id>generate-jsw</id>
						<phase>package</phase>
						<goals>
							<goal>generate-daemons</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors>
						<descriptor>src/main/assembly/assembly-win.xml</descriptor>
						<descriptor>src/main/assembly/assembly-linux.xml</descriptor>
						<descriptor>src/main/assembly/assembly-mac.xml</descriptor>
						<descriptor>src/main/assembly/assembly-solaris.xml</descriptor>
						<descriptor>src/main/assembly/assembly-unix.xml</descriptor>
						<descriptor>src/main/assembly/assembly-testtool.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-scm-plugin</artifactId>
				<version>1.9.2</version>
				<configuration>
					<providerImplementations>
						<git>jgit</git>
					</providerImplementations>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-jgit</artifactId>
						<version>1.9.2</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.3</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<format>{1}</format>
					<items>
						<item>timestamp</item>
						<item>scmVersion</item>
					</items>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
					<timestampFormat>{0,date,yyyyMMddHHmmss}</timestampFormat>
					<providerImplementations>
						<git>git</git>
					</providerImplementations>

				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>RELEASE</version>
					</dependency>
					<dependency>
						<groupId>org.tmatesoft.svnkit</groupId>
						<artifactId>svnkit</artifactId>
						<version>RELEASE</version>
					</dependency>
				</dependencies>

			</plugin>

		</plugins>
	</build>


</project>
